-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.10.0
-
None
-
3
-
9223372036854775807
Hit this testing latest master out of the blue in pfl code.
[ 6742.349293] Lustre: DEBUG MARKER: == sanity test 405: Various layout swap lock tests =================================================== 03:39:21 (1500449961) [ 6759.313039] LustreError: 3443:0:(lov_io.c:210:lov_io_slice_init()) ASSERTION( obj->lo_lsm != ((void *)0) ) failed: [ 6759.314174] LustreError: 3443:0:(lov_io.c:210:lov_io_slice_init()) LBUG [ 6759.314832] Pid: 3443, comm: kworker/u16:1 [ 6759.315510] Call Trace: [ 6759.316629] [<ffffffffa01cf7ce>] libcfs_call_trace+0x4e/0x60 [libcfs] [ 6759.318199] [<ffffffffa01cf85c>] lbug_with_loc+0x4c/0xb0 [libcfs] [ 6759.318925] [<ffffffffa07a1a52>] lov_io_init_composite+0x4d2/0x560 [lov] [ 6759.319495] [<ffffffffa07af80e>] lov_io_init+0xce/0x3e0 [lov] [ 6759.320094] [<ffffffffa0389d38>] cl_io_init0.isra.17+0x88/0x160 [obdclass] [ 6759.320682] [<ffffffffa0389eca>] cl_io_init+0x3a/0x80 [obdclass] [ 6759.321334] [<ffffffffa0ddcf08>] cl_sync_file_range+0x1b8/0x380 [lustre] [ 6759.322072] [<ffffffffa0dfea6a>] ll_writepages+0x7a/0x200 [lustre] [ 6759.322626] [<ffffffff8117e8b1>] do_writepages+0x21/0x50 [ 6759.323185] [<ffffffff81218f50>] __writeback_single_inode+0x40/0x2b0 [ 6759.323853] [<ffffffff81219c11>] writeback_sb_inodes+0x2b1/0x4d0 [ 6759.324401] [<ffffffff81219ecf>] __writeback_inodes_wb+0x9f/0xd0 [ 6759.324976] [<ffffffff8121a76b>] wb_writeback+0x28b/0x340 [ 6759.325714] [<ffffffff8121c9cc>] bdi_writeback_workfn+0x20c/0x4e0 [ 6759.326303] [<ffffffff8109add6>] process_one_work+0x206/0x5b0 [ 6759.326989] [<ffffffff8109ad6b>] ? process_one_work+0x19b/0x5b0 [ 6759.327544] [<ffffffff8109b29b>] worker_thread+0x11b/0x3a0 [ 6759.328165] [<ffffffff8109b180>] ? worker_thread+0x0/0x3a0 [ 6759.329849] [<ffffffff810a2eda>] kthread+0xea/0xf0 [ 6759.330412] [<ffffffff810a2df0>] ? kthread+0x0/0xf0 [ 6759.332153] [<ffffffff8170fbd8>] ret_from_fork+0x58/0x90 [ 6759.332533] [<ffffffff810a2df0>] ? kthread+0x0/0xf0 [ 6759.332926] [ 6759.333275] Kernel panic - not syncing: LBUG
crashdump and modules in /exports/crashdumps/192.168.10.224-2017-07-19-03\:39\:44
tag in my tree master-20170719